# balanze

./: .coderabbit.yaml  .editorconfig  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TODOS.md  deny.toml  gallery.html  justfile  lefthook.yml  package-lock.json  package.json  playwright.config.ts  rust-toolchain.toml  vite.config.js  vite.gallery.config.ts
.github/: dependabot.yml  release-body.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  pr-title.yml  release.yml  tap.yml
.lefthook/commit-msg/: conventional.sh
crates/: .gitkeep
crates/anthropic_oauth/: Cargo.toml
crates/anthropic_oauth/examples/: smoke.rs
crates/anthropic_oauth/src/: client.rs  credentials.rs  lib.rs  refresh.rs  types.rs
crates/anthropic_oauth/tests/: refresh_wiremock.rs  wiremock_tests.rs
crates/atomic_file/: Cargo.toml
crates/atomic_file/src/: lib.rs
crates/backoff/: Cargo.toml
crates/backoff/src/: lib.rs
crates/balanze_cli/: Cargo.toml  build.rs
crates/balanze_cli/src/: cli.rs  completions.rs  doctor.rs  exit.rs  export.rs  format.rs  json_output.rs  keys.rs  main.rs  present.rs  probes.rs  render.rs  setup.rs  sinks.rs  sources.rs  statusline.rs  tui.rs  watch_cmd.rs
crates/balanze_cli/tests/: integration_4quadrant.rs  integration_statusline_self_compose.rs
crates/balanze_cli/tests/fixtures/claude/projects/test-project/: session-001.jsonl
crates/balanze_cli/tests/fixtures/codex/sessions/2026/05/15/: rollout-fixture.jsonl
crates/claude_cost/: Cargo.toml  README.md  build.rs
crates/claude_cost/benches/: baseline.json  compute_cost.rs
crates/claude_cost/data/: litellm-prices-1ccc1e5-20260618.json  litellm-prices-88e03e5-20260701.json  litellm-prices-e58a561-20260514.json
crates/claude_cost/examples/: cost_smoke.rs
crates/claude_cost/src/: compute.rs  errors.rs  lib.rs  prices.rs
crates/claude_parser/: Cargo.toml
crates/claude_parser/benches/: baseline.json  incremental_parser.rs
crates/claude_parser/examples/: smoke.rs
crates/claude_parser/src/: dedup.rs  incremental.rs  lib.rs  parser.rs  types.rs  walker.rs
crates/claude_statusline/: Cargo.toml
crates/claude_statusline/src/: errors.rs  file_io.rs  lib.rs  parse.rs  payload.rs  types.rs  wiring.rs
crates/claude_statusline/tests/: real_payload.rs
crates/claude_statusline/tests/fixtures/: real-payload.json
crates/codex_local/: Cargo.toml  README.md  SCHEMA-NOTES.md
crates/codex_local/examples/: codex_local_smoke.rs
crates/codex_local/src/: errors.rs  lib.rs  parser.rs  types.rs  walker.rs
crates/keychain/: Cargo.toml
crates/keychain/src/: lib.rs
crates/logging/: Cargo.toml
crates/logging/src/: lib.rs
crates/openai_client/: Cargo.toml
crates/openai_client/src/: client.rs  lib.rs  types.rs
crates/openai_client/tests/: wiremock_tests.rs
crates/predictor/: Cargo.toml
crates/predictor/src/: lib.rs
crates/settings/: Cargo.toml
crates/settings/src/: lib.rs  statusline.rs
crates/snapshot_composer/: Cargo.toml
crates/snapshot_composer/src/: lib.rs
crates/state_coordinator/: Cargo.toml
crates/state_coordinator/src/: coordinator.rs  jsonl.rs  lib.rs  messages.rs  sink.rs  sink_file.rs  snapshot.rs  snapshot_file.rs  test_support.rs
crates/statusline_render/: Cargo.toml
crates/statusline_render/src/: cache.rs  lib.rs  render.rs  self_compose.rs  style.rs
crates/watcher/: Cargo.toml
crates/watcher/src/: errors.rs  lib.rs  tasks.rs  validate.rs
crates/watcher/src/tasks/: jsonl.rs  oauth_poll.rs  openai_poll.rs  safety.rs  statusline.rs
crates/watcher/tests/: integration.rs
crates/window/: Cargo.toml
crates/window/benches/: baseline.json  summarize_window.rs
crates/window/src/: lib.rs
docs/: ARCHITECTURE.md  GUIDE.md  PRD.md  SECURITY.md  TROUBLESHOOTING.md  prd.md
docs/reviews/: surface-consistency.html
docs/superpowers/plans/: 2026-05-15-track-a-v0.1.1-base.md  2026-05-15-track-a-v0.1.1-base.md.tasks.json  2026-05-16-track-b-derisk.md  2026-05-16-track-b-derisk.md.tasks.json  2026-05-19-track-c-honest-anthropic-cost.md  2026-05-19-track-c-honest-anthropic-cost.md.tasks.json  2026-05-20-track-d-statusline-source.md  2026-05-20-track-d-statusline-source.md.tasks.json  2026-05-21-track-e-watcher-impl.md  2026-05-21-track-e-watcher-impl.md.tasks.json  2026-06-02-align-cli-snapshot-r1-pace.md  2026-06-02-align-cli-snapshot-r1-pace.md.tasks.json  2026-06-03-v0.3.0-popover.md  2026-06-03-v0.3.0-popover.md.tasks.json  2026-06-20-v0.4.0-ui-polish.md  2026-06-20-v0.4.0-ui-polish.md.tasks.json  2026-06-30-statusline-pr1-engine-config.md  2026-06-30-statusline-pr1-engine-config.md.tasks.json  2026-06-30-statusline-pr2-cross-provider.md  2026-06-30-statusline-pr2-cross-provider.md.tasks.json  2026-06-30-statusline-pr3-self-compose-cache.md  2026-06-30-statusline-pr3-self-compose-cache.md.tasks.json  2026-07-02-statusline-generic-rate-windows.md  2026-07-02-statusline-generic-rate-windows.md.tasks.json  2026-07-08-codex-usage-enrichment.md  2026-07-08-codex-usage-enrichment.md.tasks.json  2026-07-14-statusline-glyph-grammar.md  2026-07-21-v0.5.1-reach.md
docs/superpowers/specs/: 2026-05-21-track-e-watcher-design.md  2026-06-03-v0.3.0-popover-design.md  2026-06-20-v0.4.0-ui-polish-design.md  2026-06-21-ui-states-gallery-design.md  2026-06-30-statusline-design.md  2026-07-02-statusline-generic-rate-windows-design.md  2026-07-08-codex-usage-enrichment-design.md  2026-07-14-statusline-glyph-grammar-design.md  2026-07-16-v0.5.0-distribution-legibility-design.md  2026-07-21-v0.5.1-reach-design.md
scripts/: check-secrets.mjs  check-secrets.test.ts
src/: app.html  gallery-main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  tauri_sink.rs  tray_icon.rs
src/lib/: ipc.ts  theme.css
src/lib/components/: Badge.svelte  BilledCell.svelte  BurnIndicator.svelte  CardsView.svelte  DegradedBanner.svelte  DensityToggle.svelte  EmptyState.svelte  (+8 more)
src/routes/: +layout.svelte  +page.svelte
tests/visual/: gallery.spec.ts
(+18 files in other folders)
