[workspace]
resolver = "2"
members = ["src-tauri", "crates/*"]
# Bare `cargo build` / `test` / `run` operate on the crates only — NOT
# `src-tauri`. The deliverable is the `balanze-cli` binary, which has zero
# system-library deps (pure Rust + rustls) and builds on Linux with nothing but
# a Rust toolchain. `src-tauri` drags in the GTK/WebKit native stack, which a
# CLI user should never have to install. Building the Tauri app is the explicit
# opt-in: `cargo build --workspace` or `bun run tauri dev` (those need the
# platform GUI deps — see README "Building the desktop app"). All CI and
# git-hook gates pass `--workspace`/`-p` explicitly, so this changes only the
# naive no-flag path, which is exactly the one we want GTK-free.
default-members = ["crates/*"]

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Oszkar"]
# All workspace crates are project-internal — never published to crates.io.
# This also lets path-only inter-crate deps pass `cargo deny check bans`'s
# wildcard rule (crates.io disallows path deps so cargo-deny only enforces
# the wildcard check on publishable crates).
publish = false

[workspace.dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-build = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "signal"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
directories = "6"
keyring = "3"
notify = "8"
notify-debouncer-full = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
chrono = { version = "0.4", features = ["serde"] }
# Criterion benches. Dev-only; not pulled into release
# artifacts. Pinned to 0.5 — the 0.6 line dropped `BatchSize::SmallInput`'s
# stable rendering and we depend on the JSON estimates layout for our
# committed baselines.
criterion = "0.5"

[workspace.dependencies.wiremock]
version = "0.6"
