[package]
name = "balanze"
description = "Local-first AI usage tracker — tray-first desktop app for Claude + OpenAI usage on Windows and macOS."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[lib]
name = "balanze_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# The live data spine. The coordinator owns the in-memory Snapshot and routes
# side effects through `TauriSink`; the watcher feeds it; settings configure
# the poll cadence. src-tauri boots all three in `lib.rs::boot_backend`.
state_coordinator = { path = "../crates/state_coordinator" }
watcher = { path = "../crates/watcher" }
settings = { path = "../crates/settings" }
# Registers the OS-native credential store as keyring-core's default once at
# host startup, before the watcher it boots reads the OpenAI key.
keychain = { path = "../crates/keychain" }

[dev-dependencies]
anthropic_oauth = { path = "../crates/anthropic_oauth" }
chrono = { workspace = true }

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
tauri-plugin-single-instance = { workspace = true }
