[package]
name = "balanze"
description = "Local-first AI usage tracker - tray-first desktop app for Claude + OpenAI usage on Windows and macOS."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[lib]
name = "balanze_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-notification = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

# The live data spine. The coordinator owns the in-memory Snapshot and routes
# side effects through `TauriSink`; the watcher feeds it; settings configure
# the poll cadence. src-tauri boots all three in `lib.rs::boot_backend`.
state_coordinator = { path = "../crates/state_coordinator" }
watcher = { path = "../crates/watcher" }
settings = { path = "../crates/settings" }
# Registers the OS-native credential store as keyring-core's default once at
# host startup, before the watcher it boots reads the OpenAI key.
keychain = { path = "../crates/keychain" }
# Owns the statusLine stanza in Claude Code's settings.json; the settings UI's
# wire/unwire commands delegate here (boundary #12 - the only writer of it).
claude_statusline = { path = "../crates/claude_statusline" }
# Shared `Severity` utilization classifier - the tray `ColorBucket` delegates to
# it so the icon heat scale matches the popover/CLI/statusline. Already in the
# tree transitively via state_coordinator.
window = { path = "../crates/window" }

[dev-dependencies]
anthropic_oauth = { path = "../crates/anthropic_oauth" }
# Constructs `CodexQuotaSnapshot` in the tray title/tooltip tests.
codex_local = { path = "../crates/codex_local" }
chrono = { workspace = true }

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
tauri-plugin-single-instance = { workspace = true }
