[package]
name = "anthropic_oauth"
description = "Authoritative Claude subscription state via Anthropic's /api/oauth/usage endpoint. Reads ~/.claude/.credentials.json read-only."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

# Avoid output filename collision with claude_parser's `smoke` example
# (cargo issue #6313). File stays at examples/smoke.rs; invoke via
# `cargo run -p anthropic_oauth --example anthropic_oauth_smoke`.
[[example]]
name = "anthropic_oauth_smoke"
path = "examples/smoke.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
wiremock = { workspace = true }
anyhow = { workspace = true }
tempfile = "3"
