[package]
name = "backoff"
description = "Pure exponential-backoff policy + a generic async retry combinator. No HTTP/provider knowledge — callers classify their own errors. AGENTS.md §3.1."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt"] }
