[package]
name = "balanze_cli"
description = "CLI front-end for Balanze's backend — composes anthropic_oauth + claude_parser into a single Snapshot view. Used standalone for testing and as a reference for the Tauri integration."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[[bin]]
name = "balanze"
path = "src/main.rs"

[dependencies]
anthropic_oauth = { path = "../anthropic_oauth" }
claude_cost = { path = "../claude_cost" }
claude_parser = { path = "../claude_parser" }
codex_local = { path = "../codex_local" }
keychain = { path = "../keychain" }
openai_client = { path = "../openai_client" }
settings = { path = "../settings" }
state_coordinator = { path = "../state_coordinator" }
window = { path = "../window" }

# Setup-wizard masked input. Tiny, widely-used crate (cross-platform tty
# detection + termios/console manipulation). Used only by `balanze setup`.
rpassword = "7"

tokio = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
