[package]
name = "balanze_cli"
description = "CLI front-end for Balanze's backend — composes anthropic_oauth + claude_parser into a single Snapshot view. Used standalone for testing and as a reference for the Tauri integration."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[[bin]]
# `balanze` (no suffix) is reserved for the src-tauri package's binary (the tray
# app, which becomes the headline product in v0.2+). The CLI is the power-user
# tool; distinct artifact names avoid a `target/<profile>/balanze` write race
# when `cargo build --workspace` builds both.
name = "balanze-cli"
path = "src/main.rs"

[dependencies]
anthropic_oauth = { path = "../anthropic_oauth" }
claude_cost = { path = "../claude_cost" }
claude_parser = { path = "../claude_parser" }
codex_local = { path = "../codex_local" }
keychain = { path = "../keychain" }
openai_client = { path = "../openai_client" }
settings = { path = "../settings" }
snapshot_composer = { path = "../snapshot_composer" }
state_coordinator = { path = "../state_coordinator" }

# Setup-wizard masked input. Tiny, widely-used crate (cross-platform tty
# detection + termios/console manipulation). Used only by `balanze-cli setup`.
rpassword = "7"

tokio = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
# integration_4quadrant.rs calls window::summarize_window directly (composition-
# contract test, not the CLI binary). The binary accesses window fields only
# through state_coordinator::Snapshot public fields — no direct window:: call.
window = { path = "../window" }
