[package]
name = "balanze_cli"
description = "CLI front-end for Balanze's backend - composes anthropic_oauth + claude_parser into a single Snapshot view. Used standalone for testing and as a reference for the Tauri integration."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[[bin]]
# `balanze` (no suffix) is reserved for the src-tauri package's binary (the tray
# app, which becomes the headline product). The CLI is the power-user
# tool; distinct artifact names avoid a `target/<profile>/balanze` write race
# when `cargo build --workspace` builds both.
name = "balanze-cli"
path = "src/main.rs"

[dependencies]
anthropic_oauth = { path = "../anthropic_oauth" }
backoff = { path = "../backoff" }
claude_cost = { path = "../claude_cost" }
claude_parser = { path = "../claude_parser" }
claude_statusline = { path = "../claude_statusline" }
codex_local = { path = "../codex_local" }
keychain = { path = "../keychain" }
openai_client = { path = "../openai_client" }
settings = { path = "../settings" }
snapshot_composer = { path = "../snapshot_composer" }
state_coordinator = { path = "../state_coordinator" }
statusline_render = { path = "../statusline_render" }
watcher = { path = "../watcher" }
# Shared `Severity` utilization classifier consumed by present.rs so the CLI
# matrix colors agree with the tray / popover / statusline. Already in the tree
# transitively via state_coordinator; also used directly by integration tests.
window = { path = "../window" }

# Setup-wizard masked input. Tiny, widely-used crate (cross-platform tty
# detection + termios/console manipulation). Used only by `balanze-cli setup`.
rpassword = "7"

# Stateless `export` writes CSV to stdout / a file. Pure-Rust, no system libs
# (keeps the CLI's zero-syslib promise); cleared by `cargo deny` for license +
# advisories. Used only by `balanze-cli export`.
csv = "1"

# Auto-adapting ANSI: AutoStream is an io::Write that strips color on
# non-TTY, under NO_COLOR, and when ColorChoice::Never is passed (our
# --no-color path). owo-colors applies the SGR styles. Both pure-Rust, no
# system libs - the CLI's zero-syslib promise holds (AGENTS deny gate).
# Pin anstream to the same 1.x line clap pulls in to avoid a duplicate
# version in the lock file (cargo deny warns on multiple-versions).
anstream = "1"
owo-colors = "4"

# Bounded `watch` TUI (see docs/superpowers/specs/2026-06-24-v0.4.1-cli-maturity-design.md
# section 7). All pure-Rust, no system libraries - keeps the CLI's zero-syslib
# promise. ratatui 0.29 depends on crossterm 0.28; the `event-stream` feature
# pulls a futures Stream so the select loop can `StreamExt::next` on input. We
# depend on the narrow `futures-util` (already in the tree via reqwest) rather
# than the full `futures` facade - the loop only needs `StreamExt::next`.
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
futures-util = { version = "0.3", default-features = false }

tokio = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
directories = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }

[build-dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }

[dev-dependencies]
tempfile = "3"  # used by statusline snapshot write tests
# integration_statusline_self_compose.rs: subprocess invocation via assert_cmd
# and a wiremock Admin Costs API server to gate-prove the 300s cache.
assert_cmd = "2"
wiremock = { workspace = true }
