[package]
name = "claude_cost"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "Pure-function crate synthesizing estimated Claude API cost from claude_parser UsageEvent slices and a vendored Anthropic price table."

[dependencies]
claude_parser = { path = "../claude_parser" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
