[package]
name = "claude_parser"
description = "Parse Claude Code session JSONL files into normalized UsageEvent stream."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
anyhow = { workspace = true }
directories = { workspace = true }
