[package]
name = "claude_parser"
description = "Parse Claude Code session JSONL files into normalized UsageEvent stream."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

# Workspace examples share the flat `target/debug/examples/` output dir
# (cargo issue #6313). Two crates both named their example `smoke` collided
# on Windows. Give each a distinct output name; the file path stays
# `examples/smoke.rs` so `cargo run -p claude_parser --example
# claude_parser_smoke` is the invocation.
[[example]]
name = "claude_parser_smoke"
path = "examples/smoke.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
anyhow = { workspace = true }
directories = { workspace = true }
