[package]
name = "codex_local"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "Reads the user's local OpenAI Codex CLI session files (~/.codex/sessions/) and extracts the latest rate-limit quota snapshot for display."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
directories = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tempfile = "3"
