[package]
name = "keychain"
description = "Cross-OS keyring wrapper for Balanze's user-supplied API keys. The ONLY crate in the workspace that imports the `keyring` crate (AGENTS.md §4 #5)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
keyring = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
