[package]
name = "predictor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
serde_json = { workspace = true }
