[package]
name = "statusline_render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "Renders the Balanze statusline: segment model, line layout, and threshold coloring. Later PRs add the per-turn cache and cross-provider composition."

[dependencies]
claude_statusline = { path = "../claude_statusline" }
settings = { path = "../settings" }
window = { path = "../window" }
chrono = { workspace = true }
tracing = { workspace = true }
