[package]
name = "watcher"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
chrono = { workspace = true }
claude_cost = { path = "../claude_cost" }
claude_parser = { path = "../claude_parser" }
notify = { workspace = true }
settings = { path = "../settings" }
state_coordinator = { path = "../state_coordinator" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = { workspace = true }
window = { path = "../window" }

[dev-dependencies]
anyhow = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
