[package]
name = "watcher"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
anthropic_oauth = { path = "../anthropic_oauth" }
backoff = { path = "../backoff" }
chrono = { workspace = true }
claude_parser = { path = "../claude_parser" }
claude_statusline = { path = "../claude_statusline" }
codex_local = { path = "../codex_local" }
directories = { workspace = true }
keychain = { path = "../keychain" }
notify = { workspace = true }
openai_client = { path = "../openai_client" }
reqwest = { workspace = true }
settings = { path = "../settings" }
state_coordinator = { path = "../state_coordinator" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
