[package]
name = "window"
description = "Pure rolling-window math over UsageEvent slices — 5h cap window + short-term burn rate. No I/O."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
claude_parser = { path = "../claude_parser" }
serde = { workspace = true }
chrono = { workspace = true }
